Fixed aboutStyles.css
Fixed an issue with the about page.
The about section was too high after adjusting the navbar.

--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -183,8 +183,7 @@ of the navigation links */
   display: flex;
   flex: 1;
   flex-direction: column;
-  margin: auto;
-  padding-top: 60px;
+  margin-top: 50px;
   position: relative;
   width: 100%;
 }
